# realworld-backend

./: CLAUDE.md  Dockerfile  compose.yml  pyproject.toml
src/: db.sqlite3
src/config/: settings.py  urls.py
src/users/: models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
